[package]
name = "cryptoscan"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Cryptographic algorithm detection engine for FOSSA CLI"

[[bin]]
name = "cryptoscan"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.107"
regex = "1"
walkdir = "2.4.0"
clap = { version = "4.3.21", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
