[package]
name = "millhone"
version = "0.1.0"
edition = "2021"

[features]
default = ["binary"]
binary = ["dep:clap", "dep:stable-eyre", "dep:traceconf", "dep:tracing-subscriber"]
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
tikv-jemallocator = { version = "0.5.4", optional = true }
clap = { version = "4.3.21", features = ["derive"], optional = true }
stable-eyre = { version = "0.2.2", optional = true }
traceconf = { git = "https://github.com/fossas/foundation-libs", version = "1.1.0", optional = true }
tracing-subscriber = { version = "0.3.17", features = ["json"], optional = true }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.46"
tracing = "0.1.37"
ureq = { version = "2.7.1", features = ["tls", "native-certs", "json", "brotli"] }
url = "2.4.0"
getset = "0.1.2"
derive_more = "0.99.17"
strum = { version = "0.25.0", features = ["derive"] }
itertools = "0.11.0"
