[package]
name = "millhone"
version = "0.4.0"
edition = "2021"

[features]
default = []
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
tikv-jemallocator = { version = "0.5.4", optional = true }
clap = { version = "4.3.21", features = ["derive", "env", "cargo"] }
stable-eyre = "0.2.2"
srclib = { version = "*", git = "https://github.com/fossas/foundation-libs" }
snippets = { version = "0.1.3", git = "https://github.com/fossas/foundation-libs", features = ["lang-all"] }
traceconf = { git = "https://github.com/fossas/foundation-libs", version = "1.1.0" }
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.46"
tracing = "0.1.37"
ureq = { version = "2.7.1", features = ["tls", "native-certs", "json", "brotli"] }
url = "2.4.0"
getset = "0.1.2"
derive_more = "0.99.17"
strum = { version = "0.25.0", features = ["derive"] }
itertools = "0.11.0"
typed-builder = "0.16.0"
tap = "1.0.1"
base64 = "0.21.4"
walkdir = "2.4.0"
retry = "2.0.0"
uuid = { version = "1.4.1", features = ["v4"] }
secrecy = "0.8.0"
serde_json = "1.0.107"
serde_yaml = "0.9.25"
rayon = "1.8.0"
atty = "0.2.14"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
lazy-regex = { version = "3.0.2", features = ["std", "regex"] }
fingerprint = { git = "https://github.com/fossas/lib-fingerprint.git", tag = "v3.0.0", default-features = false, features = ["fp-content-serialize-base64"] }
tar = "0.4.41"

[dev-dependencies]
maplit = "1.0.2"
pretty_assertions = "1.4.0"
rand = "0.8.5"
