[package]
name = "fs-diagnose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
getset = "0.1.2"
metrics = "0.21.1"
regex = "1.9.1"
stable-eyre = "0.2.2"
strum = { version = "0.25.0", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
walkdir = "2.3.3"

[target.windows.dependencies]
winapi-util = "0.1.5"
