
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "fossadev", email = "dev@fossa.com"},
]
dependencies = [
    "requests==2.25.1",
    "pip @ git+https://github.com/pypa/pip.git@22.0",
    "flake8 @ file:///${PROJECT_ROOT}/subpackage/flake8-6.0.0-py2.py3-none-any.whl",
    "en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.5.0/en_core_web_trf-3.5.0-py3-none-any.whl",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
extra = ["black"]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.3.1",
]
